--- a/src/Everton.123Vendas.API/appsettings.Development.json
+++ b/src/Everton.123Vendas.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres;Password=postgres;Host=localhost;Port=5432;Database=123Vendas;Pooling=true;Connection Lifetime=0;"
   }
 }
