--- a/src/Everton.123Vendas.Infrastructure.Events/Everton.123Vendas.Infrastructure.Events.csproj
+++ b/src/Everton.123Vendas.Infrastructure.Events/Everton.123Vendas.Infrastructure.Events.csproj
@@ -4,7 +4,14 @@
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>Everton._123Vendas.Infrastructure.Events</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Everton.123Vendas.Domain\Everton.123Vendas.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
